syntax = "proto3";

package project.planton.provider.cloudflare.cloudflared1database.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/cloudflare/cloudflared1database/v1/spec.proto";
import "project/planton/provider/cloudflare/cloudflared1database/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";
import "project/planton/shared/status.proto";

// cloudflare-d1-database
message CloudflareD1Database {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'cloudflare.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'CloudflareD1Database'];

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  CloudflareD1DatabaseSpec spec = 4 [(buf.validate.field).required = true];

  //status
  CloudflareD1DatabaseStatus status = 5;
}

// cloudflare-d1-database status
message CloudflareD1DatabaseStatus {
  //stack-outputs
  //  cloudflare-d1-database stack-outputs
  CloudflareD1DatabaseStackOutputs outputs = 1;
}
