syntax = "proto3";

package project.planton.provider.cloudflare.cloudflared1database.v1;

import "buf/validate/validate.proto";

// CloudflareD1DatabaseSpec defines the essential configuration for creating a Cloudflare D1 database.
// This follows the 80/20 principle: only the most commonly used fields are exposed to keep the API simple.
message CloudflareD1DatabaseSpec {
  // The unique name for the D1 database.
  string database_name = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.max_len = 64
  ];

  // The Cloudflare account ID in which to create the database.
  string account_id = 2 [
    (buf.validate.field).required = true
  ];

  // The Cloudflare region where the D1 database will be hosted.
  // Allowed values include: WEUR, ENW, APE, USW. Defaults to WEUR if not specified.
  CloudflareD1Region region = 3 [
    (buf.validate.field).required = true
  ];

  // (Optional) Specify a primary key column name if an initial table migration is needed.
  string primary_key = 4;

  // (Optional) Enable a D1 preview branch for this database (for use in preview deployments). Defaults to false.
  bool preview_branch = 5;
}

// Enumeration of supported regions for Cloudflare D1 databases.
enum CloudflareD1Region {
  cloudflare_d1_region_unspecified = 0;
  weur = 1;
  enw = 2;
  ape = 3;
  usw = 4;
}
